--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="project-card">
         <div class="project-info">
           <h3>EduSyncAI 📚🧠📅</h3>
-          <p>AI-powered student productivity app that automates syllabus parsing and calendar scheduling, increasing study efficiency by 40% and saving users 5 hours weekly</p>
+          <p>AI-powered student productivity app that automates syllabus parsing and calendar scheduling, increasing study efficiency by 40% and saving users 2 hours weekly</p>
           <a href="https://github.com/RayQCodes/EduSyncAI" target="_blank" class="btn"><i class="fab fa-github"></i> View on GitHub</a>
         </div>
       </div>
@@ -105,7 +105,7 @@
   </section>
 
   <!-- ===== CONTACT ===== -->
-  <section class="contact section" id="contact">
+  <section class="contact section" id="Contact">
     <div class="container">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:rquan3@gmu.edu">rquan3@gmu.edu</a></p>
