--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <p class="exp-company">June 2025 – Present</p>
         <ul>
           <li>Assisted in doing unit testing to test team backend and took inspiration from original weather app testing application.</li>
-          <li>Worked with a small teams to help design cybersecurity hackathon plans..</li>
+          <li>Worked with a small teams to help design a pdf uploading software that autocorrected errors in hospital forms and I worked on html, and css while my teammates worked on the backend logic and javascript.</li>
         </ul>
       </div>
 
@@ -89,7 +89,7 @@
       <div class="project-card">
         <div class="project-info">
           <h3>EduSyncAI 📚🧠📅</h3>
-          <p>AI-powered student productivity app that automates syllabus parsing and calendar scheduling, increasing study efficiency by 40% and saving users 2 hours weekly</p>
+          <p>AI-powered student productivity app that automates syllabus parsing and calendar scheduling and allows ease of access to organize notes for classes effectively.</p>
           <a href="https://github.com/RayQCodes/EduSyncAI" target="_blank" class="btn"><i class="fab fa-github"></i> View on GitHub</a>
         </div>
       </div>
