--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
       <h2>Experience</h2>
 
       <div class="exp-item">
-        <h3>Software Engineering Volunteer</h3>
+        <h3>Software Developer Volunteer</h3>
         <p class="exp-company">June 2025 – Present</p>
         <ul>
           <li>Assisted in doing unit testing to test team backend and took inspiration from original weather app testing application.</li>
-          <li>Worked with a small teams to help design a pdf uploading software that autocorrected errors in hospital forms and I worked on html, and css while my teammates worked on the backend logic and javascript.</li>
+          <li>Worked with a small teams to help design cybersecurity hackathon plans specifically worked on blue team strategies to win a CTF. </li>
         </ul>
       </div>
 
@@ -75,7 +75,7 @@
         <p class="exp-company">Georgetown University - H2 AI Hackathon | March 14 2025 – March  16 2025</p>
         <ul>
           <li>Designed strategies and contributed technical solutions during a   hackathon.</li>
-          <li>Collaborated with peers to create projects aligned with real-world hospital problems.</li>
+          <li>Collaborated with peers to create projects aligned with real-world hospital problems. Worked with a small team to create a pdf uploading software that autocorrected errors in hospital forms and I worked on html, and css while my teammates worked on the backend logic and javascript.</li>
         </ul>
       </div>
     </div>
