updated with new resume

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h2>Software Engineer & Software Developer</h2>
         <p>Passionate about software development, creating REST APIs, and building reliable applications. Actively seeking software engineering internship opportunities.</p>
         <div class="header-buttons">
-          <a href="resume final RQ.pdf" target="_blank" class="btn"><i class="fa-solid fa-file"></i> Resume</a>
+          <a href="raymonds resume.pdf" target="_blank" class="btn"><i class="fa-solid fa-file"></i> Resume</a>
           <a href="https://github.com/RayQCodes" target="_blank" class="btn"><i class="fab fa-github"></i> GitHub</a>
           <a href="https://www.linkedin.com/in/raymondwquan/" target="_blank" class="btn"><i class="fab fa-linkedin"></i> LinkedIn</a>
         </div>
@@ -56,6 +56,26 @@
     </div>
   </section>
 
+
+
+
+
+
+
+
+    <!-- ===== Currently Learning ===== -->
+  <section class="learning section">
+    <div class="container">
+      <h2>Currently Learning</h2>
+      <ul class="skills-list">
+        <li>React</li>
+        <li>MongoDB</li>
+        <li>PostgreSQL</li>
+        <li>Django</li>
+      </ul
+    </div>
+  </section>
+
   <!-- ===== EXPERIENCE ===== -->
   <section class="experience section">
     <div class="container">
@@ -89,7 +109,7 @@
       <div class="project-card">
         <div class="project-info">
           <h3>EduSyncAI 📚🧠📅</h3>
-          <p>AI-powered student productivity app that automates syllabus parsing and calendar scheduling and allows ease of access to organize notes for classes effectively.</p>
+          <p>In Progress</p>
           <a href="https://github.com/RayQCodes/EduSyncAI" target="_blank" class="btn"><i class="fab fa-github"></i> View on GitHub</a>
         </div>
       </div>
