--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Software Engineer & Software Developer</h2>
         <p>Passionate about software development, creating REST APIs, and building reliable applications. Actively seeking software engineering internship opportunities.</p>
         <div class="header-buttons">
-          <a href="raymonds resume.pdf" target="_blank" class="btn" onclick="gtag('event','resume_click',{event_category:'portfolio',event_label:'header_resume'});">
+          <a href="Raymond Quan Resume.pdf" target="_blank" class="btn" onclick="gtag('event','resume_click',{event_category:'portfolio',event_label:'header_resume'});">
             <i class="fa-solid fa-file"></i> Resume
           </a>
           <a href="https://github.com/RayQCodes" target="_blank" class="btn" onclick="gtag('event','github_click',{event_category:'portfolio',event_label:'header_github'});">
